--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "LocalServer",
   "version": "1.0.0",
-  "description": "flowers and svg.js test server",
+  "description": "Interactive demonstration of svg filter elements",
   "scripts": {
     "lite": "lite-server --port 10001",
     "start": "npm run lite"
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^1.3.1"
+  },
+  "homepage": "https://synonymforcommerce.com/feDeadBoard",
+  "dependencies": {
+    "lite": "^4.0.5"
   }
 }
