planting and inventory implemented but not complete

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "lite-server": "^1.3.1"
   },
-  "homepage": "https://synonymforcommerce.com/feDeadBoard",
+  "homepage": "https://synonymforcommerce.com/flamingone",
   "dependencies": {
     "lite": "^4.0.5"
   }
